fix: remove max-height on board SVG to prevent squashed display (#234) (#238)

--- a/webroot/besogo/css/besogo.css
+++ b/webroot/besogo/css/besogo.css
@@ -38,7 +38,6 @@
     -ms-user-select: none;       /* Internet Explorer/Edge */
      user-select: none;
      
-    max-height: 70vh;
 }
 
 .besogo-panels {
